--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.0",
+    "axios": "^1.8.4",
     "dom-to-image": "^2.6.0",
     "expo": "~52.0.20",
+    "expo-auth-session": "~6.0.1",
     "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.1",
+    "expo-dev-client": "~5.0.8",
     "expo-font": "~13.0.1",
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.1",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.2",
     "expo-media-library": "~17.0.4",
     "expo-router": "~4.0.15",
@@ -38,10 +43,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-view-shot": "~4.0.3",
-    "react-native-web": "~0.19.10",
-    "expo-dev-client": "~5.0.8",
-    "expo-auth-session": "~6.0.1",
-    "expo-crypto": "~14.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
