--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,15 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "react-native/react-native": true,
+    "node": true
   },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:react-native/all"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -18,7 +21,8 @@
   },
   "plugins": [
     "react",
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "react-native"
   ],
   "globals": {
     "fetch": "readonly"
