--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "mock-api": "json-server --watch mock-data.json --port 3001"
   },
   "jest": {
     "preset": "jest-expo"
@@ -20,11 +21,14 @@
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.8.4",
     "dom-to-image": "^2.6.0",
+    "dotenv": "^16.5.0",
     "expo": "~52.0.20",
+    "expo-asset": "~11.0.5",
     "expo-auth-session": "~6.0.1",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
     "expo-dev-client": "~5.0.8",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.1",
     "expo-image": "~2.0.3",
     "expo-image-picker": "~16.0.1",
@@ -32,10 +36,12 @@
     "expo-linking": "~7.0.2",
     "expo-media-library": "~17.0.4",
     "expo-router": "~4.0.15",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
@@ -44,20 +50,20 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-view-shot": "~4.0.3",
-    "react-native-web": "~0.19.10",
-    "expo-file-system": "~18.0.12",
-    "expo-asset": "~11.0.5"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@eslint/js": "^9.23.0",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@typescript-eslint/eslint-plugin": "^8.29.0",
     "@typescript-eslint/parser": "^8.29.0",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-native": "^5.0.0",
+    "json-server": "^1.0.0-beta.3",
     "typescript": "~5.3.3"
   },
   "private": true
