--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.8.4",
     "dom-to-image": "^2.6.0",
@@ -35,7 +36,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.2",
     "expo-media-library": "~17.0.4",
-    "expo-router": "~4.0.15",
+    "expo-router": "^4.0.20",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
