--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.0.0",
+    "@tanstack/react-query": "^5.76.1",
     "axios": "^1.8.4",
     "dom-to-image": "^2.6.0",
     "dotenv": "^16.5.0",
