axios client  with  retry and  refresh  token  on fail

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-EXPO_PUBLIC_API_URL=http://localhost:3001
-EXPO_PUBLIC_API_URL_ANDROID=http://10.0.2.2:3001
+EXPO_PUBLIC_API_URL=https://staging-api.valhallarena.se
+EXPO_PUBLIC_API_URL_ANDROID=http://10.0.2.2:5109
 EXPO_PUBLIC_CLIENT_ID=2lg4jikgmjccck95t78lf4g3jc
 EXPO_PUBLIC_USER_POOL_URL=https://eu-north-1qq0zhyyi5.auth.eu-north-1.amazoncognito.com
