--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# Development Environment Variables
-EXPO_PUBLIC_API_URL=http://localhost:5109
-EXPO_PUBLIC_API_URL_ANDROID=http://10.0.2.2:5109
-EXPO_PUBLIC_CLIENT_ID=2lg4jikgmjccck95t78lf4g3jc
-EXPO_PUBLIC_USER_POOL_URL=https://eu-north-1qq0zhyyi5.auth.eu-north-1.amazoncognito.com
-EXPO_PUBLIC_ENVIRONMENT=development
+# Staging Environment Variables
+EXPO_PUBLIC_API_URL=https://staging-api.valhallarena.se
+EXPO_PUBLIC_API_URL_ANDROID=https://staging-api.valhallarena.se
+EXPO_PUBLIC_CLIENT_ID=2os37kanrpg3d8oqqlh6u1c8r2
+EXPO_PUBLIC_USER_POOL_URL=https://staging-auth.valhallarena.se
+EXPO_PUBLIC_ENVIRONMENT=staging
